# mystic_woods_rs

./: Cargo.toml
src/: characters.rs  main.rs
src/characters/: player.rs  state.rs
src/state_machine/: trigger.rs
