[package]
name = "mystic_woods_rs"
version = "0.1.0"
edition = "2021"
exclude = ["assets/*"]
[workspace.lints.clippy]
type_complexity = "allow"
doc_markdown = "warn"
manual_let_else = "warn"
undocumented_unsafe_blocks = "warn"
redundant_else = "warn"
match_same_arms = "warn"
semicolon_if_nothing_returned = "warn"

ptr_as_ptr = "warn"
ptr_cast_constness = "warn"
#TODO(rust 1.77): enable `ref_as_ptr`
# ref_as_ptr = "warn"

[workspace.lints.rust]
unsafe_op_in_unsafe_fn = "warn"
missing_docs = "allow"
[dependencies]
seldom_state = { version = "0.10.0", features = ["leafwing_input"] }
bevy_spritesheet_animation = "0.1.0"
bevy_mod_picking = { version = "0.19.0" }
serde = "1.0.198"
thiserror = "1.0.58"
leafwing-input-manager = "0.13.3"
bevy-inspector-egui = "0.24.0"
toml = "0.8.12"
bevy_kira_audio = "0.19.0"
bevy_rapier2d = {version = "0.26.0",features = [ "simd-nightly" ]}
[lints]
workspace = true

[dependencies.bevy]
version = "0.13.2"
# Disable the default features if there are any that you do not want
default-features = false
features = [
    "animation",
    "bevy_asset",
    "bevy_gilrs",
    "bevy_scene",
    "bevy_winit",
    "bevy_core_pipeline",
    "bevy_render",
    "bevy_sprite",
    "bevy_text",
    "bevy_ui",
    "png",
    "vorbis",
    "bevy_gizmos",
    "webgl2",
    "default_font",
    "tonemapping_luts",
    "multi-threaded",
    "dynamic_linking",
    "bevy_pbr",
]


# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
